# iou-finder

./: README.md  pyproject.toml
iou/: cli.py  find_combinations.py  helpers.py
tests/: test_unittests.py
tests/files/: people_models.yml  testfile.csv
